--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
               </div>
          
               <div class="flex justify-center w-full mt-4 fade-in-up">
-                <img src="https://count.getloli.com/@wia/a?name=wia&theme=rule34&padding=7&offset=0&align=top&scale=1&pixelated=1&darkmode=auto" alt="View Counter" class="h-12"> </div>
+                <img src="https://count.getloli.com/@wia?name=wia&theme=rule34&padding=7&offset=0&align=top&scale=1&pixelated=1&darkmode=auto" alt="View Counter" class="h-12"> </div>
                 
               <div class="fade-in-up mt-4"> <p class="text-sm text-gray-500">© 2024 Wia. All rights reserved.</p>
               </div>
