--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ function scrollEffect(text) {
             <p class="text-purple-200 text-sm mb-2 text-center mt-2">...Playing Now...</p>
              <iframe
               style="border-radius:8px;"
-              src="https://open.spotify.com/embed/artist/0AvGycOEDZTaBFLCaiGd9S?utm_source=generator&theme=0"
+              src="https://open.spotify.com/embed/track/3xyNRloMm2i6sNAlnnxLFA?utm_source=generator"
               width="100%"
               height="100"
               frameBorder="0"
